# rizzler

./: .gitignore  README.md  pyproject.toml
examples/react/: package.json  pnpm-lock.yaml  serve.py  vite.config.js
examples/react/pages/: App.jsx  main.jsx
examples/react/templates/: index.html
examples/vue/: package.json  pnpm-lock.yaml  serve.py  vite.config.js
examples/vue/pages/: App.vue  main.js
examples/vue/templates/: index.html
src/rizzler/: __init__.py  cli.py  configs.py  core.py  load_config.py  rizzler_config.py  script.yaml  templates.yaml
src/rizzler/commands/: __init__.py  build.py  clean.py  initiate.py
src/rizzler/templating/: __init__.py  rizzle_templates.py
src/rizzler/types/: __init__.py  mutex_option.py
