[build-system]
build-backend = 'poetry.core.masonry.api'
requires = ['poetry-core>=1.0.0']


[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true


[tool.poetry]
authors = [
  'Sitt Guruvanich <aekazitt+github@gmail.com>',
]
classifiers = [
  'Development Status :: 3 - Alpha',
  'Environment :: Web Environment',
  'Framework :: AsyncIO',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: MIT License',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3 :: Only',
  'Operating System :: OS Independent',
  'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
  'Topic :: Text Processing :: Markup :: HTML',
  'Typing :: Typed',
]
description = 'Rizzler creates a parallel front-end dev-server using ViteJS for ASGI Frameworks'
homepage = 'https://github.com/aekasitt/rizzler'
include = [
  {path='src/rizzler/script.yaml', format=['sdist', 'wheel']},
  {path='src/rizzler/templates.yaml', format=['sdist', 'wheel']},
]
keywords = [
  'asgi',
  'blacksheep',
  'fastapi',
  'hmr',
  'javascript',
  'litestar',
  'node',
  'npm',
  'pnpm',
  'quart',
  'sanic',
  'starlette',
  'uvicorn',
  'vite',
]
license = 'MIT'
name = 'rizzler'
packages = [
  {from='src', include='rizzler'}
]
readme = 'README.md'
repository = 'https://github.com/aekasitt/rizzler'
version = '0.1.9'


[tool.poetry.dependencies]
click = '^8.1.7'
jinja2 = '^3.1.4'
markupsafe = '^2.1.5'
pydantic = '^2.6.2'
python = '^3.9'
pyyaml = '^6.0.1'
rich = '^13.7.1'
starlette = '^0'
tree-sitter = '^0.22.3'
tree-sitter-html = '^0.20.3'
tree-sitter-javascript = '^0.21.4'


[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
mypy = '^1.8.0'
ruff = '^0.4.7'
types-pyyaml = '^6.0.12.20240311'


[tool.poetry.group.examples]
optional = true


[tool.poetry.group.examples.dependencies]
fastapi = '^0'
uvicorn = '^0.30.1'


[tool.poetry.scripts]
rzl = 'rizzler:cli'


[tool.ruff]
indent-width = 2
line-length = 100
target-version = 'py38'


[tool.ruff.lint.per-file-ignores]
'__init__.py' = ['F401']  # Ignore empty imports
