[build-system]
build-backend = 'hatchling.build'
requires = [ 'hatchling' ]


[project]
authors = [
  { email = 'aekazitt+github@gmail.com', name = 'Sitt Guruvanich' },
]
classifiers = [
  'Development Status :: 3 - Alpha',
  'Environment :: Web Environment',
  'Framework :: AsyncIO',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: MIT License',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3 :: Only',
  'Operating System :: OS Independent',
  'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
  'Topic :: Text Processing :: Markup :: HTML',
  'Typing :: Typed',
]
dependencies = [
  'click >=8.1.7',
  'jinja2 >=3.1.4',
  'markupsafe >=2.1.5',
  'pydantic >=2.6.2',
  'pyyaml >=6.0.1',
  'rich >=13.7.1',
  'starlette >=0',
  'tree-sitter >=0.22.3',
  'tree-sitter-html >=0.20.3',
  'tree-sitter-javascript >=0.21.4',
]
description = 'Rizzler creates a parallel front-end dev-server using ViteJS for ASGI Frameworks'
homepage = 'https://github.com/aekasitt/rizzler'
include = [
  {path='src/rizzler/script.yaml', format=['sdist', 'wheel']},
  {path='src/rizzler/templates.yaml', format=['sdist', 'wheel']},
]
keywords = [
  'asgi',
  'blacksheep',
  'fastapi',
  'hmr',
  'hot-module-reload',
  'javascript',
  'litestar',
  'node',
  'npm',
  'pnpm',
  'starlette',
  'uvicorn',
  'vite',
]
license = 'MIT'
name = 'rizzler'
readme = 'README.md'
repository = 'https://github.com/aekasitt/rizzler'
requires-python = '>=3.9.19'
version = '0.1.9'


[project.optional-dependencies]
examples = [
  'fastapi >=0',
  'uvicorn >=0.30.1',
]


[project.scripts]
rzl = 'rizzler:cli'


[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true


[tool.ruff]
indent-width = 2
line-length = 100
target-version = 'py38'


[tool.ruff.lint.per-file-ignores]
'__init__.py' = ['F401']  # Ignore empty imports


[tool.uv]
dev-dependencies = [
  'mypy >=1.8.0',
  'ruff >=0.4.7',
  'types-pyyaml >=6.0.12.20240311',
]
